--- a/ui/src/app/shared/diff/list/diff.list.html
+++ b/ui/src/app/shared/diff/list/diff.list.html
@@ -1,16 +1,11 @@
-<div class="tiny ui buttons">
-    <button class="ui button" (click)="setUnified()" [class.active]="mode === 'unified'">{{'common_unified'
-        | translate}}</button>
-    <button class="ui button" (click)="setSplit()" [class.active]="mode === 'split'">{{'common_split'
-        | translate}}</button>
-</div>
+<nz-button-group>
+    <button nz-button (click)="setUnified()" [class.active]="mode === 'unified'">Unified</button>
+    <button nz-button (click)="setSplit()" [class.active]="mode === 'split'">Split</button>
+</nz-button-group>
+
 <ng-container *ngFor="let i of items;let idx = index">
-    <h4 class="ui top attached header">
-        <ng-container *ngIf="i.name">{{i.name}}</ng-container>
-        <ng-container *ngIf="i.translate">{{i.translate | translate: i.translateData}}</ng-container>
-    </h4>
-    <div class="ui attached segment">
+    <nz-card [nzTitle]="getTitle(i)" class="coloredTitle">
         <app-diff-item *ngIf="idx < 10" [mode]="mode" [type]="i.type" [original]="i.before" [updated]="i.after"></app-diff-item>
         <ng-container *ngIf="idx >= 10">{{'common_diff_to_much_item' | translate}}</ng-container>
-    </div>
+    </nz-card>
 </ng-container>
