--- a/ui/src/app/shared/usage/pipelines/usage.pipelines.html
+++ b/ui/src/app/shared/usage/pipelines/usage.pipelines.html
@@ -1,13 +1,13 @@
 <h3><i class="sitemap icon"></i> {{'usage_pipeline_list' | translate}}</h3>
-<div class="ui segment">
+<div class="nzSegment">
     <div *ngIf="pipelines && pipelines.length > 0;then pipelinesDisplay; else nopipelines"></div>
     <ng-template #pipelinesDisplay>
-        <div class="ui stackable four column grid">
-            <div class="center aligned column" *ngFor="let pip of pipelines">
+        <nz-row>
+            <nz-col [nzSpan]="4" [nzOffset]="2" *ngFor="let pip of pipelines">
                 <a *ngIf="project" [routerLink]="['/project', project.key, 'pipeline', pip.name]">{{pip.name}}</a>
                 <a *ngIf="!project" [routerLink]="['/project', pip.projectKey, 'pipeline', pip.name]">{{pip.name}}</a>
-            </div>
-        </div>
+            </nz-col>
+        </nz-row>
     </ng-template>
     <ng-template #nopipelines>
         <span>{{ 'common_no_pipeline' | translate }}</span>
