--- a/ui/src/app/shared/workflow/node/hook/details/hook.details.component.scss
+++ b/ui/src/app/shared/workflow/node/hook/details/hook.details.component.scss
@@ -30,3 +30,13 @@ nz-select {
     border-left: 5px solid $cds_color_teal
   }
 }
+
+.green {
+  color: $cds_color_green
+}
+.red {
+  color: $cds_color_red
+}
+.blue {
+  color: $cds_color_teal
+}
