--- a/ui/src/app/shared/requirements/value/requirements.value.html
+++ b/ui/src/app/shared/requirements/value/requirements.value.html
@@ -21,17 +21,23 @@
         <nz-autocomplete [nzDataSource]="filteredSuggest" nzBackfill #autoOsArch></nz-autocomplete>
     </ng-container>
     <ng-container *ngIf="requirement.type === 'model' && workerModels">
-        <div class="ui grid">
-            <div class="ui fourteen wide column">
+        <nz-row>
+            <nz-col [nzSpan]="20">
                 <input nz-input name="value-workermodel" [nzAutocomplete]="autoWorkerModel" [(ngModel)]="requirement.value" (input)="change(requirement)">
                 <nz-autocomplete [nzDataSource]="filteredSuggest" nzBackfill #autoWorkerModel></nz-autocomplete>
-            </div>
-            <div class="ui two wide column valign">
-                <span *ngIf="workerModels.get(requirement.value)?.nb_spawn_err > 0" nz-tooltip nzTooltipTitle="{{'worker_model_spawn_error_tooltip' | translate}}" nzTooltipPlacement="top"><i class="exclamation triangle icon large red"></i></span>
-                <span *ngIf="workerModels.get(requirement.value)?.is_official" nz-tooltip nzTooltipTitle="{{'worker_model_official_tooltip' | translate}}" nzTooltipPlacement="top"><i class="check circle outline icon large green"></i></span>
-                <span *ngIf="workerModels.get(requirement.value)?.is_deprecated" nz-tooltip nzTooltipTitle="{{'worker_model_deprecated_tooltip' | translate}}}" nzTooltipPlacement="top"><i class="exclamation circle icon large orange"></i></span>
-            </div>
-        </div>
+            </nz-col>
+            <nz-col [nzSpan]="3" [nzOffset]="1">
+                <span *ngIf="workerModels.get(requirement.value)?.nb_spawn_err > 0" nz-tooltip nzTooltipTitle="Model in error" nzTooltipPlacement="top">
+                    <span class="icon status red" nz-icon nzType="warning" nzTheme="outline"></span>
+                </span>
+                <span *ngIf="workerModels.get(requirement.value)?.is_official" nz-tooltip nzTooltipTitle="Official worker model maintained by CDS Administrators" nzTooltipPlacement="top">
+                    <span class="icon status green" nz-icon nzType="check-circle" nzTheme="outline"></span>
+                </span>
+                <span *ngIf="workerModels.get(requirement.value)?.is_deprecated" nz-tooltip nzTooltipTitle="This worker model is deprecated" nzTooltipPlacement="top">
+                    <span class="icon status orange" nz-icon nzType="warning" nzTheme="outline"></span>
+                </span>
+            </nz-col>
+        </nz-row>
     </ng-container>
     <ng-container *ngIf="requirement.type === 'model' || requirement.type === 'service'">
         {{ 'requirement_options' | translate }}
