--- a/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.html
+++ b/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.html
@@ -57,12 +57,18 @@
         </nz-row>
         <nz-row>
             <nz-col [nzSpan]="24">
-                <app-menu class="menu" [items]="menuItems" (onSelect)="selectMenuItem($event)"></app-menu>
+                <ul nz-menu nzMode="horizontal" *ngIf="menuItems?.size > 0">
+                    <ng-container *ngFor="let entry of menuItems | forMap">
+                        <li nz-menu-item [nzSelected]="selectedItem === entry.key" (click)="selectMenuItem(entry.key)">
+                            {{entry.value}}
+                        </li>
+                    </ng-container>
+                </ul>
             </nz-col>
         </nz-row>
         <nz-row>
             <nz-col [nzSpan]="24">
-                <div class="field" [ngSwitch]="selectedItem.key">
+                <div class="field" [ngSwitch]="selectedItem">
                     <app-data-table *ngSwitchCase="'sessions'" [withFilter]="filterSessions" [withPagination]="5"
                                     [columns]="columnsSessions" [data]="consumer.sessions">
                     </app-data-table>
