--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -43,6 +43,10 @@ textarea:read-only {
   border-radius: 2px;
 }
 
+nz-breadcrumb-item {
+  font-size: 1.2em;
+}
+
 nz-card.redTitle {
   .ant-card-head {
     min-height: 44px;
